fix:> simplify code/#127